fixing and making adding another ingress for iba so no reliance on github label